--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "fullstack-nextjs-starter": "file:",
     "lucide-react": "^0.479.0",
     "lupi": "^1.0.1",
-    "next": "15.2.1",
+    "next": "^15.2.1",
     "postcss": "^8.5.3",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
