--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,9 @@
       "@utils/*": ["/utils/*"]
     }
   },
+  "paths": {
+    "@/*": ["./*"],
+  },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
