--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "fullstack-nextjs-starter": "file:",
     "lucide-react": "^0.479.0",
     "lupi": "^1.0.1",
-    "next": "^15.3.1",
+    "next": "^15.3.2",
+    "next-auth": "^5.0.0-beta.27",
     "postcss": "^8.5.3",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
