--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fullstack-nextjs-starter": "file:",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.479.0",
     "lupi": "^1.0.1",
     "next": "^15.3.2",
-    "next-auth": "^5.0.0-beta.27",
+    "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
     "prisma": "^6.4.1",
     "react": "^19.0.0",
