feat(frontend): adicionando varias melhorias visuais com novas cores, animações e imagem de fundo
- Ajusta paleta de cores para melhorar contraste e estética
- Adiciona animação Lottie na tela de finalização
- Substitui GIF por animação em JSON para melhor performance
- Inclui imagem decorativa de fundo com estilo responsivo
- Refatora layout para manter centralização e responsividade

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.15.0",
     "fullstack-nextjs-starter": "file:",
     "jspdf": "^3.0.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.479.0",
     "lupi": "^1.0.1",
     "next": "^15.3.2",
