--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@prisma/client": "^6.4.1",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.26.0",
