Adicionar configuração e testes do Jest para as páginas Cliente, Contato e Sobre
- Criar jest.config.js e jest.setup.ts para configuração de testes
- Implementar testes para OrcamentoPage em Cliente.test.js, abrangendo renderização, interações modais, validação de formulários e funcionalidade de localStorage
- Desenvolver testes para a página Contato em Contato.test.js, incluindo validação de formulários e tratamento de envios
- Adicionar testes para a página Sobre em Sobre.test.js, verificando a renderização de seções e conteúdo

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,7 +35,7 @@
     "**/*.tsx",
     ".next/types/**/*.ts",
     "src/types/**/*.d.ts" // 👈 importante: inclui os arquivos de declaração
-  ],
+, "src/tests/Sobre.test.js", "jest.config.js"  ],
   "exclude": ["node_modules"]
 }
 
