--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-testing-library": "^7.1.1",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^30.0.0-beta.3",
+    "nodemailer": "^7.0.3",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
     "tailwindcss": "^4",
